Main navbar menu aligns to the right correctly

--- a/themes/marketing-site/assets/sass/_styles.scss
+++ b/themes/marketing-site/assets/sass/_styles.scss
@@ -15,23 +15,21 @@ nav {
     padding-left: 10px;
 }
 
-#mainNavbar {
-    max-width: 470px;
-}
-
-.navbar-div {
+#navbar-div {
     margin: 0;
     width: 100%;
-}
-
-.nav-subdiv-left {
-    padding-left: 7%;
 }
 
 .nav-subdiv-right {
     padding-left: 7%;
     padding-right: 10px;
 }
+
+@media (max-width: 768px) {
+    .nav-subdiv-right {
+        padding-left: 0;
+    }
+  }
 
 #dropdown-button-left {
     padding-right: 0;
